# xplane-web-api

./: AGENTS.md  Cargo.toml  README.md  build.rs
openapi/: xplane-web-api-v3.yaml
src/: error.rs  lib.rs  websocket.rs
